--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -392,6 +392,9 @@
 
     &-text {
       display: block;
+      font-family: Inter;
+      color: #425669;
+      font-weight: 400;
 
       h2 {
         margin: 0;
@@ -399,13 +402,13 @@
 
       p {
         margin-top: 1.5rem;
-        margin-bottom: 1.4rem;
+        margin-bottom: 0.85rem;
       }
     }
 
     .template-modal-close {
       background: none;
-      border: 2px solid #0E2557;
+      border: 2px solid #0e2557;
       padding: 0.17rem 0.56rem;
       border-radius: 50%;
       font-size: 24px;
@@ -437,20 +440,18 @@
           font-weight: 800;
           font-size: 1.2rem;
 
-          svg{
-            border: 1px solid #CFD3DD;
+          svg {
+            border: 1px solid #cfd3dd;
             border-radius: 50%;
             padding: 0.15rem;
-
           }
         }
 
         .template-accordion-body {
           padding: 10px 0;
           font-family: Inter;
-          color: #1C1C1C;
+          color: #1c1c1c;
           font-size: 0.9rem;
-
         }
       }
     }
@@ -517,21 +518,42 @@
   .contact-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
+    align-items: flex-start; // Align items to the start of the container
+    padding: 0.5rem 0.2rem;
+
+    label {
+      width: 100%; // Ensure the label takes up full width
+      font-family: Inter;
+      font-size: 0.85rem;
+      font-weight: 500;
+      text-align: left;
+      padding-bottom: 0.6rem;
+      margin-bottom: 5px; // Add margin to separate from input field
+
+      @include mobile(530px) {
+        // Adjustments for mobile view if needed
+      }
+
+      @include mobile(1040px) {
+        // Adjustments for mobile view if needed
+      }
+    }
 
     input,
     textarea {
-      width: 80%;
+      width: 100%; // Ensure input fields take up full width
       margin-bottom: 15px;
+      font-family: Inter;
+      font-weight: 400;
       padding: 10px;
-      border: 1px solid #ddd;
+      border: 1px solid #cfd3dd;
       border-radius: 5px;
       font-size: 1rem;
     }
 
     button {
-      width: 80%;
+      width: 100%; // Ensure button takes up full width
+      margin-top: 1.2rem;
       padding: 10px;
       color: var(--white);
       background-color: #0e2557;
