--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -4,17 +4,11 @@
   &__content {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 1rem;
   }
 
-  &__text {
-    // border: 2px solid red;
-    // display: flex;
-    // align-items: flex-start;
-    // flex-direction: column;
-    // position: sticky;
-  }
+  // &__text {
+  // }
 
   .template-container {
     width: 100%;
@@ -26,7 +20,7 @@
     .template-image {
       width: 100%;
       max-width: 100%;
-      display: inline-block;
+      // display: inline-block;
       margin: 0 auto;
     }
   }
@@ -99,7 +93,7 @@
     margin-top: 60px;
 
     @include mobile(600px) {
-      margin-top: 40px;
+      margin-top: 6rem;
     }
   }
 }
